update gradle.properties for fixing build error project

--- a/talkWithDoctor_Mobile/app.json
+++ b/talkWithDoctor_Mobile/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "talkWithDoctor_Mobile",
-  "displayName": "talkWithDoctor_Mobile"
+  "name": "TalkWithDoctor_Mobile",
+  "displayName": "TalkWithDoctor_Mobile"
 }
