--- a/talkWithDoctor_Mobile/package.json
+++ b/talkWithDoctor_Mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "talkWithDoctor_Mobile",
+  "name": "TalkWithDoctor_Mobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
