--- a/talkWithDoctor_Mobile/android/settings.gradle
+++ b/talkWithDoctor_Mobile/android/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'talkWithDoctor_Mobile'
+rootProject.name = 'TalkWithDoctor_Mobile'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
