--- a/talkWithDoctor_Mobile/ios/talkWithDoctor_Mobile/Info.plist
+++ b/talkWithDoctor_Mobile/ios/talkWithDoctor_Mobile/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>talkWithDoctor_Mobile</string>
+	<string>TalkWithDoctor_Mobile</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
